feat: fix upload avatar